further cleanup